testsuite/tests/typecheck/should_compile/T13585.hs
module T13585 where
import T13585b (extractZonedTime)

main :: IO ()
main = print extractZonedTime
