testsuite/tests/typecheck/should_fail/T13068m.hs
import T13068
main = print (f :: Int)
